--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,8 +7,12 @@
     <title>MirrorX | Virtual Atelier</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;900&family=Rajdhani:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <script>
+      // Shim process.env for browser execution
+      window.process = { env: { API_KEY: '' } };
+
       tailwind.config = {
         theme: {
           extend: {
@@ -137,12 +140,42 @@
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.35.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
+    "firebase/app": "https://esm.sh/firebase@10.8.0/app",
+    "firebase/analytics": "https://esm.sh/firebase@10.8.0/analytics",
+    "firebase/messaging": "https://esm.sh/firebase@10.8.0/messaging",
+    "firebase/": "https://esm.sh/firebase@^12.7.0/",
+    "./App": "./App.tsx",
+    "./types": "./types.ts",
+    "./constants": "./constants.ts",
+    "./components/TryOnInterface": "./components/TryOnInterface.tsx",
+    "./components/Pricing": "./components/Pricing.tsx",
+    "./components/Wardrobe": "./components/Wardrobe.tsx",
+    "./components/Recommendations": "./components/Recommendations.tsx",
+    "./components/AuthModal": "./components/AuthModal.tsx",
+    "./components/ProductModal": "./components/ProductModal.tsx",
+    "./components/Loader": "./components/Loader.tsx",
+    "./services/api": "./services/api.ts",
+    "./services/firebase": "./services/firebase.ts",
+    "./services/geminiService": "./services/geminiService.ts",
+    "./services/dbService": "./services/dbService.ts",
+    "cors": "https://esm.sh/cors@^2.8.5",
+    "crypto": "https://esm.sh/crypto@^1.0.1",
+    "bcryptjs": "https://esm.sh/bcryptjs@^3.0.3",
+    "express": "https://esm.sh/express@^5.2.1",
+    "dotenv": "https://esm.sh/dotenv@^17.2.3",
+    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3",
+    "firebase-admin/": "https://esm.sh/firebase-admin@^13.6.0/",
+    "firebase-admin": "https://esm.sh/firebase-admin@^13.6.0",
+    "google-auth-library": "https://esm.sh/google-auth-library@^10.5.0",
+    "razorpay": "https://esm.sh/razorpay@^2.9.6",
+    "@genkit-ai/firebase": "https://esm.sh/@genkit-ai/firebase@^1.27.0"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
